--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
             <div class="game-card" data-index = '1'>
                 <h3>WAR THUNDER</h3>
                 <p>ВОЕННЫЙ СИМУЛЯТОР</p>
-                <div class="game-comment">ЛЮБИМЫЙ КЛАСС: САМОЛЁТ</div>
+                <div class="game-comment">ЛЮБИМЫЙ КЛАСС: ТАНКИ</div>
             </div>
             <div class="game-card" data-index = '2'>
                 <h3>HEARTS OF IRON IV</h3>
                 <p>СТРАТЕГИЯ</p>
-                <div class="game-comment">ЛЮБИМАЯ СТРАНА: СССР</div>
+                <div class="game-comment">ЛЮБИМАЯ СТРАНА: ФРАНЦИЯ</div>
             </div>
             <div class="game-card" data-index = '3'>
                 <h3>TERRARIA</h3>
